intasc10, experimenting with colored subnav links

--- a/intasc/intasc1.html
+++ b/intasc/intasc1.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="school leaf intasc">
+    <section class="school inglemoor-pine intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
