--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -22,16 +22,16 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-                        <a href="intasc1.html">1. Learner Development</a>
-                        <a href="intasc2.html">2. Learning Differences</a>
-                        <a href="intasc3.html">3. Learning Environments</a>
-                        <a href="intasc4.html">4. Content Knowledge</a>
-                        <a href="intasc5.html">5. Content Application</a>
-                        <a href="intasc6.html">6. Assessment</a>
-                        <a href="intasc7.html">7. Instructional Planning</a>
-                        <a href="intasc8.html">8. Instructional Strategies</a>
-                        <a href="intasc9.html">9. Prof. Learning & Ethical Practice</a>
-                        <a href="#">10. Leadership & Collaboration</a>
+                        <a href="intasc1.html" id="learner">1. Learner Development</a>
+                        <a href="intasc2.html" id="learner">2. Learning Differences</a>
+                        <a href="intasc3.html" id="learner">3. Learning Environments</a>
+                        <a href="intasc4.html" id="content">4. Content Knowledge</a>
+                        <a href="intasc5.html" id="content">5. Content Application</a>
+                        <a href="intasc6.html" id="instructional">6. Assessment</a>
+                        <a href="intasc7.html" id="instructional">7. Instructional Planning</a>
+                        <a href="intasc8.html" id="instructional">8. Instructional Strategies</a>
+                        <a href="intasc9.html" id="professional">9. Prof. Learning & Ethical Practice</a>
+                        <a href="#" id="professional">10. Leadership & Collaboration</a>
                     </div>
                 </div>
             </div>
@@ -45,8 +45,105 @@
                 professionals, and community members to ensure learner growth, and to advance the profession.
             </blockquote>
 
-            <p>text needed Leadership & Collaboration</p>
+            <p>There are many forms of leadership. Leadership is thinking beyond yourself to what is good for the your
+                school and community. Having a vision for where you want to go, planning how to get there, and inspiring
+                others to join you is clearly leadership, and we think of such people as charasmatic. But there are
+                other types of leaders, and here's the key: leadership can be distributed. Some provide vital expertise
+                and services. Some act in an advisory capacity, stepping back giving perspective. Even just showing up
+                faithfully is leadership, because without a cadre of reliable, supportive volunteers every organization
+                would fail.</p>
         </div>
+
+        <section class="intasc grid2">
+
+            <div class="box intasc">
+                <h2>Hunt the Wumpus</h2>
+                <p>Spring quarter the students in my C# classes were assigned into development teams to create a
+                    computer game for the &ldquo;Hunt the Wumpus&rdquo; competition sponsored by Microsoft. The students
+                    were assigned areas of code to create, such as cave system, score board, player, and movement. They
+                    had to learn to work together to make it happen, with me, my mentor, and the Microsoft volunteers
+                    who came twice a week acting as advisors.</p>
+                <p>I taught the students about source control, how to create a code repository on GitHub, and how to
+                    merge code so that multiple developers can work together in the same repository. I gave advice,
+                    montiored progress, and helped to debug and sometimes detangle failed merges. The students were
+                    required to add me as a collaborator on their repositories. Artifacts presented are the assignment
+                    in Schoology requiring students to do this, a screenshot of an email inviting me to collaborate, and
+                    a screenshot of a GitHub repository.</p>
+                <p>On the big day we took the two classes to Microsoft for the judging competition with several other
+                    schools competing. Three of our eight teams brought home trophies, one of which is also presented as
+                    an artifact.</p>
+            </div>
+
+            <embed src="pdf/GIT Enlistment.pdf" type="application/pdf" width="600px" height="500px"
+                title="Embedded PDF Document">
+            <img src="../img/Wumpus Github Invite.png"
+                alt="email screenshot of an invite to collaborate on a Wumpus respository in GitHub">
+            <img src="../img/Wumpus Github.png" alt="screenshot of a Wumpus respository in GitHub">
+
+            <img src="../img/wumpus.jpg" alt="winning students holding Hunt the Wumpus trophy">
+
+            <div class="box intasc">
+                <h3>Cross-Discipline Instruction</h2>
+                    <p>As a college student, I always enjoyed the way history was interwoven into my science and
+                        mathematics classes. I teach my computer science classes that way, too, because it's important
+                        for students to understand their place in history, where it started, and where it's going.
+                        Presented as an artifact is the PowerPoint of The History of Computer Science, which is my
+                        favorite lecture to deliver.
+                    </p>
+                    <p>This last year I also taught Personal Finance, including a unit on Paying for College. One of the
+                        lessons I developed was on winning scholarships, with an assigned scholarship essay. Teaching
+                        how to write an essay was language arts. Students were taught that the elements of a winning
+                        scholarhip essay are:
+                    </p>
+                    <ul>
+                        <li>Core Values</li>
+                        <li>Insights</li>
+                        <li>Vulnerability</li>
+                        <li>Craft</li>
+                        <li>A tie-in to your educational and career goals</li>
+                        <li>How you will give back</li>
+                    </ul>
+                    <p>As an example, I present from the Assessment page a scholarhip rough draft written by one of my
+                        students, the feedback I gave him, and his final draft: <a
+                            href="intasc6.html#scholarship">Scholarship Essay</a></p>
+            </div>
+
+            <div class="box intasc">
+                <h2>Toastmasters Club</h2>
+                <p>I've been a Toastmaster for five years. I've been an officer in multiple roles, including club
+                    president and area director. As an area director, I visited the clubs assigned to me and worked with
+                    them to acheive success. We were awarded President's Distinguished Area, the only area in the
+                    district to acheive that status. My artifact is a screenshot of the email from our district director
+                    notifying me of this.</p>
+                <p>The computer science curriculum in most colleges focuses on technical skills, yet communication and
+                    leadership skills are critical in every career. Toastmasters can bridge that gap. While one must be
+                    over 18 to be a member of Toastmasters, high school students can participate in the Youth Leadership
+                    Program. It is my desire to sponsor one at my school.</p>
+            </div>
+
+            <img src="../img/TM-AD.jpg"
+                alt="email notifying me that my area had acheived President's Distinguished Area for Toastmasters">
+
+            <div class="box intasc">
+                <h2>PTA Membership</h2>
+                <p>As a dad, I've been a member of the PTA, regularly attending meetings and volunteering. I've been a
+                    field trip chaperone, volunteered in a classroom for a day, and helped with field day. Because of my
+                    past advocacy for foster kids, I had experience working with the legislature so I was Legislative
+                    Liason two years in a row and organized kids to come to Olympia on PTA Lobby Day (usually on MLK
+                    Day). I plan to suport the PTA as a teacher as well. My artifact is a photo of my D.O.G.S. (Dads of
+                    Great Students) t-shirt, worn while volunteering.</p>
+            </div>
+            <div class="box intasc">
+                <h2>Community Leadership</h2>
+                <p>I have been a foster/adopt dad and advocated for foster kids, testifying in Olympia and working
+                    toward the passage of foster care reforms. I'm a member of my church's charity committee, and have
+                    organized or assisted in multiple programs, including food drives for the Woodinville Storehouse
+                    food bank and toiletries drives for the homeless women and their families who live in "Safe Parking"
+                    at a local church. Many years ago, I was humanitarian aid director for a grass-roots organization,
+                    living in Romania and coordinating delivery of aid and supervising volunteers at Romanian
+                    orphanages.</p>
+            </div>
+        </section>
     </section>
 </body>
 
