--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -107,8 +107,10 @@
                 height="600px" title="Embedded PDF Document">
 
             <div>
-            <div class="box intasc">
-                <h2>Scholarship Rough Draft</h2>
+
+            <div id="scholarship" class="box intasc">
+                <h2>Student's Scholarship Essay</h2>
+                <h3>Student's Rough Draft</h3>
                 <p>Most days, the house is loud. Not with laughter or music, but with the sounds of crying toddlers,
                     parents yelling, and the aching reminder of responsibility. I’m the oldest of three, and while most
                     people my age were worrying about what to post, I was figuring out how to clean the whole house,
@@ -128,7 +130,7 @@
 
             </div>
             <div class="box intasc">
-                <h2>Scholarship Rough Draft Feedback</h2>
+                <h3>My Feedback</h3>
                 <p>Great start, with a moving emotional narrative. A few things:</p>
                 <p>You've got the vulnerability piece nailed. Now you have to figure out where you are going with this.
                     How is this related to your educational goals and what you want to do with your life? What insights
@@ -154,7 +156,7 @@
             </div>
             </div>
             <div class="box intasc">
-                <h2>Scholarship Final Draft</h2>
+                <h3>Scholarship Final Draft</h3>
                 <p>Most days, the house is loud. Not with laughter or music, but with the sounds of crying toddlers,
                     parents yelling, and the aching reminder of responsibility. I&rsquo;m the oldest of three, and while
                     most people my age were worrying about what to post, I was figuring out how to clean the whole
