--- a/pages/philosophy.html
+++ b/pages/philosophy.html
@@ -39,7 +39,7 @@
         <h1>Teaching Philosophy</h1>
 
         <div class="box quote">
-            <blockquote class="quote center">“You can watch somebody ski all day. You’re not going to learn how to
+            <blockquote class="quote center">“You can watch somebody ski all day.<br>You’re not going to learn how to
                 ski that way.”</blockquote>
             <blockquote class="attrib">– UW Chemistry Professor Alden "Loo" Crittenden (1920-2009)</blockquote>
         </div>
@@ -95,6 +95,7 @@
                 You may never get another chance in your life to devote this much time to learning. This is your
                 education. Own it.</p>
         </div>
+        <p></p>
     </section>
 </body>
 
