added text shadow to subnav, fixed typos

--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -95,15 +95,20 @@
                         how to write an essay was language arts. Students were taught that the elements of a winning
                         scholarhip essay are:
                     </p>
-                    <ul>
-                        <li>Core Values</li>
-                        <li>Insights</li>
-                        <li>Vulnerability</li>
-                        <li>Craft</li>
-                        <li>A tie-in to your educational and career goals</li>
-                        <li>How you will give back</li>
-                    </ul>
-                    <p>As an example, I present from the Assessment page a scholarhip rough draft written by one of my
+
+                    <div class="grid2">
+                        <ul>
+                            <li>Core Values</li>
+                            <li>Personal Insights</li>
+                            <li>Vulnerability</li>
+                            <li>Craft</li>
+                        </ul>
+                        <ul>
+                            <li>A tie-in to your educational and career goals</li>
+                            <li>How you plan to use your education to give back</li>
+                        </ul>
+                    </div>
+                    <p>As an example, I present from the Assessment page a scholarship rough draft written by one of my
                         students, the feedback I gave him, and his final draft: <a
                             href="intasc6.html#scholarship">Scholarship Essay</a></p>
             </div>
@@ -112,9 +117,9 @@
                 <h2>Toastmasters Club</h2>
                 <p>I've been a Toastmaster for five years. I've been an officer in multiple roles, including club
                     president and area director. As an area director, I visited the clubs assigned to me and worked with
-                    them to acheive success. We were awarded President's Distinguished Area, the only area in the
-                    district to acheive that status. My artifact is a screenshot of the email from our district director
-                    notifying me of this.</p>
+                    them to acheive success. We were awarded President's Distinguished Area, which is the highest level
+                    award. We were the only area in the district to acheive that status. My artifact is a screenshot of
+                    the notification email from our district director.</p>
                 <p>The computer science curriculum in most colleges focuses on technical skills, yet communication and
                     leadership skills are critical in every career. Toastmasters can bridge that gap. While one must be
                     over 18 to be a member of Toastmasters, high school students can participate in the Youth Leadership
